--- a/views/propiedades/crear.pug
+++ b/views/propiedades/crear.pug
@@ -12,9 +12,16 @@ block contenido
       span.font-normal Raíces
     h2.text-center.text-2xl.font-extrabold= pagina
 
+    if errores
+      div(class="max-w-md mx-auto mt-10")
+        each error in errores
+          p.bg-red-600.text-white.uppercase.text-xs.text-center.p-2.mb-1.font-bold= error.msg
+
     //- .space-y-8 = da espacio entre los elementos hijo 
     div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
-      form.space-y-8(action="") 
+      form.space-y-8(action="/propiedades/crear", method="POST")
+        input(type="hidden", name="_csrf", value= csrfToken)
+        
         div.space-y-5
           h3.text-lg.leading-6.font-medium.text-gray-900 Información General
           p.text-gray-600 Añade información general de la propiedad
@@ -79,6 +86,8 @@ block contenido
               input(type="hidden", name="calle" id="calle")
               input(type="hidden", name="lat" id="lat")
               input(type="hidden", name="lng" id="lng")
+          
+          input(class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold uppercase cursor-pointer" type="submit", value="Añadir Imagen")
 
 //- leaflet: alternativa a GOOGLE MAPS, librería para mapas, Esri: librería que permite acceder a info de las calles cuando le pasas las coordenadas en conjunto de Geosearch
 block scripts
